test/errors/undefined-macro/undefined-macro.rom
Error in `undefined-macro.asm` on line 1: Macro `test` was not defined
